--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
     <div class="about-left">
         <div class="about-intro-text">
             
-            <p>Hello, I'm Dibora. I'm a <span class="green-text">Full Stack Developer</span>.</p>
         </div>
-        <h2>Who am I?</h2>
+        <h1>Who Am I?</h1>
         <div><h3>I'm Dibora, a skilled Full Stack Web Developer specializing in building dynamic and responsive web applications. I work with HTML, CSS, JavaScript, PHP, React.js, Node.js, MySQL, and Firebase. I enjoy tackling challenges and am quick to learn new technologies. Currently seeking roles that match my passion for web development.</h3></div>
     <br>
         <div class="about-icons">
