--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <br>
         <div class="about-icons">
             <ul class="social-links">
-                <li><a href="https://github.com/yourusername" target="_blank" rel="noopener"><img src="icons/githubg.svg" alt="GitHub"></a></li>
+                <li><a href="https://github.com/Deborah-Girma" target="_blank" rel="noopener"><img src="icons/githubg.svg" alt="GitHub"></a></li>
                 <li><a href="https://linkedin.com/in/yourusername" target="_blank" rel="noopener"><img src="icons/linkeding.svg" alt="LinkedIn"></a></li>
                 <li><a href="https://twitter.com/yourusername" target="_blank" rel="noopener"><img src="icons/twitterg.svg" alt="Twitter"></a></li>
                 <li><a href="https://upwork.com/fl/yourusername" target="_blank" rel="noopener"><img src="icons/upworkg.svg" alt="Upwork"></a></li>
