--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="about-icons">
             <ul class="social-links">
                 <li><a href="https://github.com/Deborah-Girma" target="_blank" rel="noopener"><img src="icons/githubg.svg" alt="GitHub"></a></li>
-                <li><a href="https://linkedin.com/in/yourusername" target="_blank" rel="noopener"><img src="icons/linkeding.svg" alt="LinkedIn"></a></li>
+                <li><a href="https://linkedin.com/in/dibora-girma-64b707285" target="_blank" rel="noopener"><img src="icons/linkeding.svg" alt="LinkedIn"></a></li>
                 <li><a href="https://twitter.com/yourusername" target="_blank" rel="noopener"><img src="icons/twitterg.svg" alt="Twitter"></a></li>
                 <li><a href="https://upwork.com/fl/yourusername" target="_blank" rel="noopener"><img src="icons/upworkg.svg" alt="Upwork"></a></li>
                 <li><a href="https://codepen.io/yourusername" target="_blank" rel="noopener"><img src="icons/facebookg.svg" alt="CodePen"></a></li>
