--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <div class="education-container">
             <div class="education-column">
                 <div class="education-row">
-                    <h3>Institution 1</h3>
-                    <p>Details about Institution 1.</p>
+                    <h3>Mizan Tepi University1</h3>
+                    <p>Bachelors of science Degree in Information Systems</p>
                 </div>
                 <div class="education-row">
                     <h3>Institution 2</h3>
