--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="education-container">
             <div class="education-column">
                 <div class="education-row">
-                    <h3>Mizan Tepi University1</h3>
+                    <h3>Mizan Tepi University</h3>
                     <p>Bachelors of science Degree in Information Systems</p>
                 </div>
                 <div class="education-row">
