--- a/index.html
+++ b/index.html
@@ -76,18 +76,18 @@
                     <p>Bachelors of science Degree in Information Systems</p>
                 </div>
                 <div class="education-row">
-                    <h3>Institution 2</h3>
-                    <p>Details about Institution 2.</p>
+                    <h3>Lege Tafo Preparatory School </h3>
+                    <p>Certificate</p>
                 </div>
             </div>
             <div class="education-column">
                 <div class="education-row">
-                    <h3>Institution 3</h3>
-                    <p>Details about Institution 3.</p>
+                    <h3>Selam Children Village</h3>
+                    <p>Certificate</p>
                 </div>
                 <div class="education-row">
-                    <h3>Institution 4</h3>
-                    <p>Details about Institution 4.</p>
+                    <h3>Rohobot School</h3>
+                    <p>Certificate</p>
                 </div>
             </div>
         </div>
