--- a/index.html
+++ b/index.html
@@ -158,18 +158,18 @@
         <div class="experience-columns">
             <div class="experience-left">
                 <div class="experience-item">
-                    <h3>Job Title 1</h3>
-                    <p>Details about your job experience.</p>
+                    <h3>Software Developer</h3>
+                    <p>Civil Service Commision</p>
                 </div>
                 <div class="experience-item">
-                    <h3>Job Title 2</h3>
-                    <p>Details about your job experience.</p>
+                    <h3>Remote Full Stack Developer</h3>
+                    <p>Fivver</p>
                 </div>
             </div>
             <div class="experience-right">
                 <div class="experience-item">
-                    <h3>Job Title 3</h3>
-                    <p>Details about your job experience.</p>
+                    <h3>Intern</h3>
+                    <p>Lege Tafo Public Service</p>
                 </div>
                 <div class="experience-item">
                     <h3>Job Title 4</h3>
