--- a/index.html
+++ b/index.html
@@ -187,22 +187,27 @@
         <div class="projects-grid">
             <div class="column">
                 <div class="project-item">
-                    <h3>Project Title 1</h3>
-                    <p>Description of Project 1</p>
+                    <h3>Dormitory Management System</h3>
+                    <p>A system for managing dormitory operations, including room allocation and maintenance requests for Mizan Tepi University.
+</p>
+                   <h4>Technologies: HTML, CSS, JavaScript, PHP, MySQL.</h4>
                 </div>
                 <div class="project-item">
-                    <h3>Project Title 2</h3>
-                    <p>Description of Project 2</p>
+                    <h3>Library Management System</h3>
+                    <p>A system to streamline library operations like book cataloging and borrower tracking.</p>
+                    <h4>Technologies: HTML, CSS, JavaScript, PHP, MySQL.</h4>
                 </div>
             </div>
             <div class="column">
                 <div class="project-item">
-                    <h3>Project Title 4</h3>
-                    <p>Description of Project 4</p>
+                    <h3>Bus Ticket Reservation System</h3>
+                    <p>An online system for reserving bus tickets with features like seat selection and payment processing.</p>
+                     <h4>Technologies: HTML, CSS, JavaScript, PHP, MySQL.</h4>
                 </div>
                 <div class="project-item">
-                    <h3>Project Title 5</h3>
-                    <p>Description of Project 5</p>
+                    <h3>Blog Website</h3>
+                    <p>A website for publishing and managing blog posts with content management and user authentication.</p>
+                    <h4>Technologies: HTML, CSS, JavaScript, PHP, MySQL.</h4>
                 </div>
             </div>
         </div>
