--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
             <div class="column">
                 <div class="project-item">
                     <h3>Dormitory Management System</h3>
-                    <p>A system for managing dormitory operations, including room allocation and maintenance requests for Mizan Tepi University.
-</p>
+                    <p>A system for managing dormitory operations, including room allocation and maintenance requests for Mizan Tepi University.</p>
                    <h4>Technologies: HTML, CSS, JavaScript, PHP, MySQL.</h4>
                 </div>
                 <div class="project-item">
