--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="contact-me">
             <a href="#contact" class="btn">Contact Me</a>
-            <a href="#resume" class="btn">Get Resume</a>
+            <a href="https://drive.google.com/file/d/1f9tcRCFngpp_cBNose2gSlF-h56l_O_p/view?usp=sharing" class="btn">Get Resume</a>
         </div>
     </div>
     <div class="about-right">
