--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <p>Fivver</p>
                 </div>
             </div>
-            <div class="experience-right">
+            <div class="education-column">
                 <div class="experience-item">
                     <h3>Intern</h3>
                     <p>Lege Tafo Public Service</p>
@@ -184,14 +184,14 @@
 <section id="projects">
     <div class="section-content">
         <h2>Projects</h2>
-        <div class="projects-grid">
-            <div class="column">
-                <div class="project-item">
+        <div class="education-container">
+            <div class="education-column">
+                <div class="education-row">
                     <h3>Dormitory Management System</h3>
                     <p>A system for managing dormitory operations, including room allocation and maintenance requests for Mizan Tepi University.</p>
                    <h4>Technologies: HTML, CSS, JavaScript, PHP, MySQL.</h4>
                 </div>
-                <div class="project-item">
+                <<div class="education-row">
                     <h3>Library Management System</h3>
                     <p>A system to streamline library operations like book cataloging and borrower tracking.</p>
                     <h4>Technologies: HTML, CSS, JavaScript, PHP, MySQL.</h4>
