--- a/index.html
+++ b/index.html
@@ -184,34 +184,35 @@
 <section id="projects">
     <div class="section-content">
         <h2>Projects</h2>
-        <div class="education-container">
-            <div class="education-column">
-                <div class="education-row">
-                    <h3>Dormitory Management System</h3>
+        <div class="projects-container">
+            <div class="projects-column">
+                <div class="project-row">
+                    <h3>MTU Dormitory Management System</h3>
                     <p>A system for managing dormitory operations, including room allocation and maintenance requests for Mizan Tepi University.</p>
-                   <h4>Technologies: HTML, CSS, JavaScript, PHP, MySQL.</h4>
+                    <h4>Technologies: HTML, CSS, JavaScript, PHP, MySQL.</h4>
                 </div>
-                <<div class="education-row">
+                <div class="project-row">
                     <h3>Library Management System</h3>
                     <p>A system to streamline library operations like book cataloging and borrower tracking.</p>
-                    <h4>Technologies: HTML, CSS, JavaScript, PHP, MySQL.</h4>
+                    <h4>Technologies: Java, Spring Boot, PostgreSQL.</h4>
                 </div>
             </div>
-            <div class="column">
-                <div class="project-item">
+            <div class="projects-column">
+                <div class="project-row">
                     <h3>Bus Ticket Reservation System</h3>
                     <p>An online system for reserving bus tickets with features like seat selection and payment processing.</p>
-                     <h4>Technologies: HTML, CSS, JavaScript, PHP, MySQL.</h4>
+                    <h4>Technologies: PHP, Laravel, Stripe API.</h4>
                 </div>
-                <div class="project-item">
+                <div class="project-row">
                     <h3>Blog Website</h3>
                     <p>A website for publishing and managing blog posts with content management and user authentication.</p>
-                    <h4>Technologies: HTML, CSS, JavaScript, PHP, MySQL.</h4>
+                    <h4>Technologies: WordPress, HTML/CSS, JavaScript.</h4>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
 
 
 <section id="contact" class="contact-section">
