--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dibora Girma - Portfolio</title>
+     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3.2.0/dist/emailjs.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="dark-theme">
