--- a/index.html
+++ b/index.html
@@ -275,6 +275,12 @@
 
     <!-- Scripts -->
     <script src="scripts.js"></script>
+<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+    (function(){
+        emailjs.init('ILbgm7K6PhRbT8nHF');
+    })();
+</script>
     <script src="contact_script.js"></script>
 </body>
 </html>
