--- a/index.html
+++ b/index.html
@@ -106,50 +106,51 @@
                 <img src="skills/css.svg" alt="CSS3">
             </div>
             <div class="skill-item">
-                <img src="skills/php.svg" alt="JavaScript">
+                <img src="skills/javascript.svg" alt="JavaScript">
             </div>
             <div class="skill-item">
-                <img src="skills/mysql.svg" alt="PHP">
+                <img src="skills/php.svg" alt="PHP">
             </div>
             <div class="skill-item">
-                <img src="skills/javascript.svg" alt="MySQL">
+                <img src="skills/mysql.svg" alt="MySQL">
             </div>
             <div class="skill-item">
-                <img src="skills/java.svg" alt="Responsive Web Design">
+                <img src="skills/java.svg" alt="Java">
             </div>
             <div class="skill-item">
-                <img src="skills/react.svg" alt="MySQL">
+                <img src="skills/react.svg" alt="React">
             </div>
             <div class="skill-item">
-                <img src="skills/bootstrap.svg" alt="MySQL">
+                <img src="skills/bootstrap.svg" alt="Bootstrap">
             </div>
             <div class="skill-item">
-                <img src="skills/adobeaudition.svg" alt="MySQL">
+                <img src="skills/adobeaudition.svg" alt="Adobe Audition">
             </div>
             <div class="skill-item">
-                <img src="skills/firebase.svg" alt="MySQL">
+                <img src="skills/firebase.svg" alt="Firebase">
             </div>
             <div class="skill-item">
-                <img src="skills/git.svg" alt="MySQL">
+                <img src="skills/git.svg" alt="Git">
             </div>
             <div class="skill-item">
-                <img src="skills/tailwind.svg" alt="MySQL">
+                <img src="skills/tailwind.svg" alt="Tailwind CSS">
             </div>
             <div class="skill-item">
-                <img src="skills/angular.svg" alt="MySQL">
+                <img src="skills/angular.svg" alt="Angular">
             </div>
             <div class="skill-item">
-                <img src="skills/csharp.svg" alt="MySQL">
+                <img src="skills/csharp.svg" alt="C#">
             </div>
             <div class="skill-item">
-                <img src="skills/c.svg" alt="MySQL">
+                <img src="skills/c.svg" alt="C">
             </div>
             <div class="skill-item">
-                <img src="skills/cplusplus.svg" alt="MySQL">
+                <img src="skills/cplusplus.svg" alt="C++">
             </div>
         </div>
     </div>
 </section>
+
 
 
 <section id="experience">
