--- a/index.html
+++ b/index.html
@@ -109,9 +109,6 @@
                 <img src="skills/javascript.svg" alt="JavaScript">
             </div>
             <div class="skill-item">
-                <img src="skills/php.svg" alt="PHP">
-            </div>
-            <div class="skill-item">
                 <img src="skills/mysql.svg" alt="MySQL">
             </div>
             <div class="skill-item">
@@ -146,6 +143,9 @@
             </div>
             <div class="skill-item">
                 <img src="skills/cplusplus.svg" alt="C++">
+            </div>
+              <div class="skill-item">
+                <img src="skills/html.svg" alt="HTML5">
             </div>
         </div>
     </div>
