--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                     <p>Lege Tafo Public Service</p>
                 </div>
                 <div class="experience-item">
-                    <h3>Job Title 4</h3>
-                    <p>Details about your job experience.</p>
+                    <h3>Intern</h3>
+                    <p>ALX ETHIOPIA</p>
                 </div>
             </div>
         </div>
