--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <ul class="social-links">
                 <li><a href="https://github.com/Deborah-Girma" target="_blank" rel="noopener"><img src="icons/githubg.svg" alt="GitHub"></a></li>
                 <li><a href="https://linkedin.com/in/dibora-girma-64b707285" target="_blank" rel="noopener"><img src="icons/linkeding.svg" alt="LinkedIn"></a></li>
-                <li><a href="https://twitter.com/Dibora" target="_blank" rel="noopener"><img src="icons/twitterg.svg" alt="Twitter"></a></li>
-                <li><a href="https://upwork.com/fl/Dibora" target="_blank" rel="noopener"><img src="icons/upworkg.svg" alt="Upwork"></a></li>
-                <li><a href="https://codepen.io/Dibora" target="_blank" rel="noopener"><img src="icons/facebookg.svg" alt="CodePen"></a></li>
+                <li><a href="https://twitter.com/DiboraG" target="_blank" rel="noopener"><img src="icons/twitterg.svg" alt="Twitter"></a></li>
+                <li><a href="https://upwork.com/fl/DiboraG" target="_blank" rel="noopener"><img src="icons/upworkg.svg" alt="Upwork"></a></li>
+                <li><a href="https://codepen.io/DiboraG" target="_blank" rel="noopener"><img src="icons/facebookg.svg" alt="CodePen"></a></li>
             </ul>
         </div>
         <div class="contact-me">
@@ -259,9 +259,9 @@
                     <ul>
                         <li><a href="https://github.com/Deborah-Girma" target="_blank" rel="noopener"><img src="icons/githubg.svg" alt="GitHub"></a></li>
                         <li><a href="https://linkedin.com/in/dibora-girma-64b707285" target="_blank" rel="noopener"><img src="icons/linkeding.svg" alt="LinkedIn"></a></li>
-                        <li><a href="https://twitter.com/Dibora" target="_blank" rel="noopener"><img src="icons/twitterg.svg" alt="Twitter"></a></li>
-                        <li><a href="https://upwork.com/fl/Dibora" target="_blank" rel="noopener"><img src="icons/upworkg.svg" alt="Upwork"></a></li>
-                        <li><a href="https://codepen.io/Dibora" target="_blank" rel="noopener"><img src="icons/facebookg.svg" alt="CodePen"></a></li>
+                        <li><a href="https://twitter.com/DiboraG" target="_blank" rel="noopener"><img src="icons/twitterg.svg" alt="Twitter"></a></li>
+                        <li><a href="https://upwork.com/fl/DiboraG" target="_blank" rel="noopener"><img src="icons/upworkg.svg" alt="Upwork"></a></li>
+                        <li><a href="https://codepen.io/DiboraG" target="_blank" rel="noopener"><img src="icons/facebookg.svg" alt="CodePen"></a></li>
                     </ul>
                 </div>
             </div>
